// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag behaves correctly when click CheckableTag 1`] = `
<CheckableTag
  checked={true}
  onChange={[MockFunction]}
  prefixCls="zw-tag"
  size=""
>
  <div
    className="zw-tag zw-tag--checkable zw-tag--checked"
    onClick={[Function]}
  >
    default
  </div>
</CheckableTag>
`;

exports[`Tag behaves correctly when disabled CheckableTag clicked uncalled onChange 1`] = `
<CheckableTag
  disabled={true}
  onChange={[MockFunction]}
  prefixCls="zw-tag"
  size=""
>
  <div
    className="zw-tag zw-tag--checkable zw-tag--disabled"
    onClick={[Function]}
  >
    default
  </div>
</CheckableTag>
`;

exports[`Tag render CheckableTag correctly 1`] = `
<CheckableTag
  checked={true}
  prefixCls="zw-tag"
  size=""
>
  <div
    className="zw-tag zw-tag--checkable zw-tag--checked"
    onClick={[Function]}
  >
    default
  </div>
</CheckableTag>
`;

exports[`Tag render CheckableTag size correctly 1`] = `
<div
  class="multi-rows"
>
  <div
    class="zw-tag zw-tag--checkable zw-tag--lg"
  >
    lg
  </div>
  <div
    class="zw-tag zw-tag--checkable zw-tag--md"
  >
    md
  </div>
  <div
    class="zw-tag zw-tag--checkable zw-tag--sm"
  >
    lg
  </div>
  <div
    class="zw-tag zw-tag--checkable zw-tag--xs"
  >
    lg
  </div>
</div>
`;

exports[`Tag renders Tag bordered correctly 1`] = `
<div
  class="multi-rows"
>
  <div
    class="zw-tag zw-tag--red zw-tag--md zw-tag--radius"
  >
    normal
  </div>
  <div
    class="zw-tag zw-tag--green zw-tag--md zw-tag--radius zw-tag--unborder"
    style="color:#fff;border:hidden"
  >
    unbordered
  </div>
</div>
`;

exports[`Tag renders Tag color correctly 1`] = `
<div
  class="multi-rows"
>
  <div
    class="zw-tag zw-tag--red zw-tag--md zw-tag--radius"
  >
    normal
  </div>
</div>
`;

exports[`Tag renders Tag shape correctly 1`] = `
<div>
  <div
    class="zw-tag zw-tag--md zw-tag--radius"
  >
    radius
  </div>
  <div
    class="zw-tag zw-tag--md zw-tag--rect"
  >
    rect
  </div>
  <div
    class="zw-tag zw-tag--md zw-tag--round"
  >
    round
  </div>
</div>
`;

exports[`Tag renders Tag size correctly  1`] = `
<div
  class="multi-rows"
>
  <div
    class="zw-tag zw-tag--md zw-tag--radius"
  >
    default
  </div>
  <div
    class="zw-tag zw-tag--lg zw-tag--radius"
  >
    lg
  </div>
  <div
    class="zw-tag zw-tag--md zw-tag--radius"
  >
    md
  </div>
  <div
    class="zw-tag zw-tag--sm zw-tag--radius"
  >
    sm
  </div>
  <div
    class="zw-tag zw-tag--xs zw-tag--radius"
  >
    xs
  </div>
</div>
`;

exports[`Tag renders normal Tag correctly 1`] = `
<div
  class="multi-rows"
>
  <div
    class="zw-tag zw-tag--md zw-tag--radius"
  >
    normal
  </div>
</div>
`;
